@@ -28,11 +28,13 @@ $(LIBNSS): nss.o $(LIBTCB_LONG)
 install-non-root: install
 
 install:
-	install -m $(SHLIBMODE) $(LIBTCB_LONG) $(DESTDIR)/lib/
-	ln -sf $(LIBTCB_LONG) $(DESTDIR)/lib/$(LIBTCB)
-	ln -sf ../../lib/$(LIBTCB) $(DESTDIR)/usr/lib/libtcb.so
-	install -m $(SHLIBMODE) $(LIBNSS) $(DESTDIR)/lib/
-	install -m 644 $(LIBTCB_A) $(DESTDIR)/usr/lib/
+	mkdir -p $(DESTDIR)$(SLIBDIR)
+	mkdir -p $(DESTDIR)$(LIBDIR)
+	install -m $(SHLIBMODE) $(LIBTCB_LONG) $(DESTDIR)$(SLIBDIR)/
+	ln -sf $(LIBTCB_LONG) $(DESTDIR)$(SLIBDIR)/$(LIBTCB)
+	ln -sf ../..$(SLIBDIR)/$(LIBTCB) $(DESTDIR)$(LIBDIR)/libtcb.so
+	install -m $(SHLIBMODE) $(LIBNSS) $(DESTDIR)$(SLIBDIR)/
+	install -m 644 $(LIBTCB_A) $(DESTDIR)$(LIBDIR)/
 
 clean:
 	rm -f *.o *~ $(LIBTCB)* libtcb.so $(LIBNSS) *.a
