@@ -5,11 +5,8 @@ all clean:
 install-non-root: install
 
 install:
-	mkdir -p $(DESTDIR)/lib
-	mkdir -p $(DESTDIR)$(SBINDIR)
-	mkdir -p $(DESTDIR)$(LIBEXECDIR)
-	mkdir -p $(DESTDIR)$(MANDIR)/man{5,8}
-	mkdir -p $(DESTDIR)/usr/{lib,include}
+	mkdir -p $(DESTDIR)$(MANDIR)/man5
+	mkdir -p $(DESTDIR)/usr/include
 
 	install -m 644 tcb.5 $(DESTDIR)$(MANDIR)/man5/
 	install -m 644 ../include/tcb.h $(DESTDIR)/usr/include/
