@@ -1,5 +1,15 @@
 2005-04-22  Dmitry V. Levin  <ldv@altlinux.org>
 
+	Enhance multilib support.
+
+	* Make.defs: New variables: SLIBDIR and LIBDIR.
+	* libs/Makefile, pam_tcb/Makefile, tcb.spec: Use them.
+
+	* libs/Makefile, pam_tcb/Makefile, misc/Makefile, progs/Makefile:
+	Create all necessary directories in the beginning of install target.
+
+2005-04-22  Dmitry V. Levin  <ldv@altlinux.org>
+
 	Deal with compilation warnings generated by new gcc compiler.
 
 	* include/attribute.h: New file.
